# EnvML

./: .gitignore  CHANGELOG.md  EnvCap.cabal  EnvML.cabal  Makefile  Notes.md  README.md  Readme.md  hie.yaml
app/: Main.hs
docs/: WASM.wasm  ghc_wasm_jsffi.js  index.html
examples/: test0.eml  test1.eml  test10.eml  test11.eml  test12.eml  test13.eml  test14.eml  test15.eml  test16.eml  test2.eml  test3.eml  test4.eml  test5.eml  test6.eml  test7.eml  test8.eml  test9.eml  testlambda.eml
examples/Basic/ModulesEx1/: Ex.eml  Ex.emli
examples/Cardelli/Ex1/: Lib.emli  Main.eml  Main.emli
examples/Cardelli/Ex2/: Lib.emli  Main.eml
examples/FirstclassModules/: Basic.emli  Database.eml  Database.emli  RuntimeDB.eml
examples/ForAll/: Example0-0.eml  Example0-1.eml  Example0.eml  Example1.eml  Example2.eml  Example3.eml  Example4.eml  Example5.eml  Example6.eml  test.eml
examples/basic-module/: x.eml
examples/rest/Cardelli/Ex1/: Lib.eml
examples/rest/Cardelli/Ex2/: Lib.eml  Main.emli
examples/rest/FirstclassModules/: Basic.eml  Database.eml  Database.emli  RuntimeDB.emli
examples/rest/basic-module/: x.emli
examples/sepcomptest_0/: build.repl  main.eml  main.emli  math.emli
examples/sepcomptest_1/: build.repl  main.eml  main.emli  math.eml  utils.eml  utils.emli
examples/sepcomptest_2/: app.eml  arith.eml  arith.emli  build.repl  consts.eml  consts.emli
examples/sepcomptest_3/: base.eml  base.emli  build.repl  evens.eml  evens.emli  main.eml  odds.eml  odds.emli
examples/sepcomptest_4/: build.repl  core.eml  core.emli  stats.eml  stats.emli
examples/sepcomptest_5/: build.repl  report.eml  report.emli  shapes.eml  shapes.emli  types.eml
examples/sepcomptest_6/: app.eml  app.emli  build.repl  poly.eml  poly.emli
lean/: Main.lean
lean-aristotle/: ARISTOTLE_SUMMARY_b47095af-4bb0-4941-b403-ae9cce9b969e.md  Elaboration.lean  Theories.lean  lakefile.toml
lean-aristotle/Core/: Semantics.lean  Syntax.lean  Typing.lean
lean-aristotle/SCE/: Semantics.lean  Syntax.lean
lean-sce/: LeanSce.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
lean-sce/LeanSce/: Elaboration.lean  Examples.lean  Theories.lean
lean-sce/LeanSce/Core/: BigStep.lean  Determinism.lean  Semantics.lean  SmallStep.lean  Syntax.lean  Theories.lean  Typing.lean
lean-sce/LeanSce/SCE/: Elaboration.lean  Semantics.lean  Syntax.lean  Theories.lean
lean/Formalization/Elaboration/: Rules.lean  Theorems.lean
lean/Formalization/EnvML/: Syntax.lean
rocq/: Basics.v  Big.v  Elaboration.v  Latest.v  _CoqProject
rocq/Theories/: Basics.v  Syntax.v
rocq/docs/: Makefile  lambdaSCE.ott  lambdaSCE.tex  paper.tex
rocq/docs/styles/: ottalt.sty
src/: PrettyWeb.hs  Repl.hs  Syntax.hs  Utils.hs  WASM.hs
src/Core/: Check.hs  DeBruijn.hs  Eval.hs  Evaluator.hs  Named.hs  Pretty.hs  PrettyPrint.hs  Repl.hs  Syntax.hs  TypeChecker.hs
src/Core/Parser/: Lexer.x  Parser.y
src/CoreE/: Check.hs  Eval.hs  Print.hs
src/CoreFE/: Check.hs  DeBruijn.hs  Eval.hs  Named.hs  Repl.hs  Syntax.hs
src/CoreFE/Parser/: Lexer.x  Parser.y
src/CoreForAll/: Check.hs  Eval.hs  Pretty.hs  Repl.hs  Syntax.hs
src/CoreForAll/Parser/: Lexer.hs  Lexer.x  Parser.hs  Parser.y
src/ENVCAP/: Utils.hs
src/ENVCAP/Parser/Implementation/: ParseImp.hs  ParseImp.info
src/ENVCAP/Parser/Interface/: ParseInterface.hs  ParseInterface.info
src/EnvML/: Check.hs  DeBruijn.hs  Desugar.hs  Desugared.hs  Elab.hs  Elaboration.hs  Errors.hs  LocallyNameless.hs  Parse.hs  Print.hs  Syntax.hs  TypeExpansion.hs
src/EnvML/Parser/: AST.hs  ElabAST.hs  Lexer.hs  Lexer.x  Parse.hs  Parser.hs  Parser.y  Pretty.hs  Process.hs
src/EnvML/Parser/HappyAlex/: Lexer.x  Parser.y
src/Manager/: Implementation.hs  Interface.hs  Manage.hs  Resolve.hs  Sort.hs
src/Manager/Compilation/: Incremental.hs  Separate.hs
src/SCE/: Core.hs  Proto.hs  Source.hs  SourceTest.hs  Test.hs
src/Source/: Desugar.hs  Elab.hs  Elaboration.hs  Errors.hs  LocallyNameless.hs  PrettyPrint.hs  Syntax.hs  TypeExpansion.hs
test/Core/: CheckSpec.hs  CoreSpec.hs  DeBruijnSpec.hs  EvalSpec.hs
test/CoreFE/: CoreFESpec.hs  DeBruijnSpec.hs
test/CoreForAll/: CheckSpec.hs  EvalSpec.hs
test/EnvML/: CheckSpec.hs  ElabSpec.hs  ImportSpec.hs  PrintExpSpec.hs  PrintTypSpec.hs
test/EnvML/Examples/: BasicModuleSpec.hs
test/EnvML/Parser/: ASTSpec.hs  DeBruijnSpec.hs  DesugarSpec.hs  ElabASTSpec.hs  ParserSpec.hs  PrintExpSpec.hs  PrintTypSpec.hs
test/Examples/ForAll/: Example0Spec.hs  Example1Spec.hs  Example2Spec.hs  Example3Spec.hs  Example4Spec.hs  Example5Spec.hs  Example6Spec.hs
