cabal-version:      2.4
name:               EnvCap
version:            0.1.0.0

author:             jam-khan
maintainer:         jamkhan@connect.hku.hk

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Syntax Utils 
                      Source.Errors Source.Elaboration
                      Core.Evaluator Core.PrettyPrint Core.TypeChecker
    build-depends:    base ^>=4.17.2.0,
                      QuickCheck,
                      parsec,
                      megaparsec,
                      parser-combinators >=1.3.0,
                      array,
                      containers,
                      text,
                      haskeline >= 0.8,
                      filepath,
                      directory,
                      configurator,
                      bytestring,
                      binary,
                      mtl
    hs-source-dirs:   src, test, examples
    ghc-options:      -Wall
    default-language: Haskell2010

executable EnvCap
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        EnvCap
    
    hs-source-dirs:   app
    default-language: Haskell2010
