cabal-version:      2.4
name:               EnvML
version:            0.1.0.0
author:             jam-khan
maintainer:         jamkhan@connect.hku.hk
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    
    exposed-modules:    Utils 
                        Syntax
                        EnvML.Elab
                        EnvML.Syntax
                        EnvML.Parser.AST
                        EnvML.Parser.Parse
                        EnvML.Parser.HappyAlex.Parser
                        EnvML.Parser.HappyAlex.Lexer
                        Source.Desugar 
                        Source.Errors
                        Source.LocallyNameless
                        Source.TypeExpansion
                        Source.Elaboration
                        CoreE.Print
                        CoreE.Eval
                        CoreE.Check
                        CoreForAll.Eval
                        CoreForAll.Check
                        CoreForAll.Syntax
    
    build-depends:    base >= 4.17 && < 5,
                      QuickCheck,
                      parsec,
                      megaparsec,
                      parser-combinators,
                      array,
                      containers,
                      text,
                      haskeline,
                      filepath,
                      directory,
                      configurator,
                      bytestring,
                      binary,
                      mtl
    
    ghc-options:      -Wall
    default-language: Haskell2010

executable EnvML
    main-is:          Main.hs
    
    build-depends:    base >= 4.17 && < 5,
                      EnvML

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
                     
    hs-source-dirs: test

    build-depends:
        base >= 4.7 && <5,
        hspec,
        EnvML,
        QuickCheck

    build-tool-depends:
        hspec-discover:hspec-discover

    default-language: Haskell2010