cabal-version:      2.4
name:               EnvML
version:            0.1.0.0
author:             jam-khan
maintainer:         jamkhan@connect.hku.hk
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    
    exposed-modules:    Utils 
                        -- WASM
                        EnvML.Elab
                        EnvML.Syntax
                        EnvML.Desugar
                        EnvML.DeBruijn
                        EnvML.Parser.AST
                        EnvML.Parse
                        EnvML.Parser.Parser
                        EnvML.Parser.Lexer
                        Core.Eval
                        Core.Check
                        Core.Named
                        Core.Syntax
                        Core.DeBruijn
                        Core.Pretty
                        Core.Repl
                        Core.Parser.Parser
                        Core.Parser.Lexer
    
    build-depends:    base >= 4.17 && < 5,
                      QuickCheck,
                      parsec,
                      megaparsec,
                      parser-combinators,
                      array,
                      containers,
                      text,
                      haskeline,
                      filepath,
                      directory,
                      configurator,
                      bytestring,
                      binary,
                      mtl
    
    ghc-options:      -Wall
    default-language: Haskell2010

executable EnvML
    main-is:          Main.hs
    
    build-depends:    haskeline ^>=0.8.2.1,
                      base >= 4.17 && < 5,
                      EnvML

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
                     
    hs-source-dirs: test

    build-depends:
        base >= 4.7 && <5,
        hspec,
        EnvML,
        QuickCheck

    build-tool-depends:
        hspec-discover:hspec-discover

    default-language: Haskell2010
